Refactoring of distribution, core, example-tests refactored. Removed version warning from start script.